--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "$(npm bin)/mocha"
   },
   "dependencies": {
     "body-parser": "~1.10.2",
@@ -16,5 +17,9 @@
   },
   "engines": {
     "node": "0.10.x"
+  },
+  "devDependencies": {
+    "mocha": "~2.1.0",
+    "supertest": "~0.15.0"
   }
 }
